# comfy-gen

./: .gitignore  ACCEPTANCE_VERIFICATION.md  CLI_MCP_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  MCP_CONFIG_REFERENCE.md  README.md  batch_asian_results.json  comfy  demo_lora_injection.py  examples_lora_usage.py  generate.py  lora_catalog.yaml  lora_presets.yaml  manual_test_websocket.py  mcp_config.json  mcp_server.html  mcp_server.py  presets.yaml  prompt_catalog.yaml  pyproject.toml  requirements-lint.txt  requirements.txt  test_lora_injection.py  test_mcp_server.py  youngboh_batch_results.json
.github/: copilot-instructions.md
api/: README.md  __init__.py  app.py  schemas.py
clients/: __init__.py  models.py  workflows.py
comfy_gen/: __init__.py  __main__.py  cli.py  client.py  content_validator.py  metadata.py  mlflow_logger.py  pose_validation.py  prompt_enhancer.py  quality.py  validation.py
comfygen/: __init__.py  civitai_client.py  comfyui_client.py  config.py  huggingface_client.py  minio_client.py  models.py  workflows.py
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BATTLESHIP_SPRITE_GUIDE.md  CATEGORY_AUTHORING.md  DETAILED_PROMPTING_GUIDE.md  ERROR_HANDLING.md  EXPERIMENTS.md  GAME_ASSET_QUICKREF.md  GAME_ASSET_TESTING.md  INTELLIGENT_GENERATION_ARCHITECTURE.md  LEARNINGS.md  LORA_CATALOG.md  LORA_GUIDE.md  LORA_INJECTION.md  LORA_REFERENCE.md  MCP_CLI_PARITY.md  MCP_COMPREHENSIVE.md  MCP_GUIDE.md  MCP_PRESET_INTEGRATION.md  MCP_QUICKSTART.md  MCP_SERVER.md  MCP_SERVERS.md  MCP_TEST_RESULTS.md  MCP_VALIDATION.md  METADATA_SCHEMA.md  METADATA_TRACKING.md  MODEL_INVENTORY.md  MODEL_REGISTRY.md  NSFW_GENERATION_LEARNINGS.md  NSFW_GUIDE.md  PACKAGE_STRUCTURE.md  PONY_REALISM_GUIDE.md  PRESETS.md  PRESET_INTEGRATION.md  QUALITY_SYSTEM.md  QUICKSTART.md  README.md  TESTING.md  TESTING_CANCELLATION.md  (+7 more)
examples/: advanced_params.py  basic_generation.py  civitai_mcp_examples.py  demo_preset_integration.py  img2img_workflow.py  lora_injection.py  mcp_preset_examples.py  mcp_progress_tracking.py  mcp_usage_example.py  mcp_validation_example.py  metadata_embedding.py  person_count_validation.py  prompt_enhancement.py  prompt_preset_usage.sh  validation_workflow.py  video_generation.py
experiments/: 2026-01-08-flux-golden-retriever-session.json  TEMPLATE.json
instructions/: experiments.md  generation.md  testing.md
mcp_servers/: README.md  __init__.py  civitai_mcp.py  huggingface_mcp.py
scripts/: README.md  backfill_metadata.py  batch_asian_hq.py  batch_asian_nsfw.py  batch_experiments.py  batch_explicit_100.py  batch_explicit_hq.py  batch_explicit_v2.py  batch_explicit_v3.py  batch_final_refined.py  batch_flux_golden.py  batch_golden_hires.py  batch_golden_retrievers.py  batch_hq.py  batch_llm_test.py  batch_nsfw_test.py  batch_oral_refined.py  batch_pony_hq.py  batch_pony_realism.py  batch_youngboh_chars.py  cancel_generation.py  check_comfyui_status.py  civitai_audit.py  comfyui_utils.py  create_bucket.py  (+30 more)
(+178 files in other folders)
