[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-gen"
version = "0.2.0"
description = "Programmatic image/video generation using ComfyUI API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "torch",
    "torchvision",
    "minio",
    "Pillow",
    "transformers",
    "mcp",
    "websocket-client",
    "pyyaml",
    "httpx",
    "aiofiles",
    "pyiqa",
    "ultralytics",
    "huggingface_hub",
    "click>=8.0",
]

[project.scripts]
comfy = "comfy_gen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["comfy_gen*", "comfygen*"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["comfy_gen", "comfygen"]

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable as codebase matures
ignore_missing_imports = true   # Many ML libs lack stubs
exclude = [
    "tests/",
    "build/",
    "dist/",
]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring ComfyUI server connection",
    "slow: tests that take a long time to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
